# Stock-Analysis-Agent

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  agent_graph.py  exporter.py  main.py  tools.py
app/components/: __init__.py  cards.py  chart.py  panels.py
app/prompts/: system.md
data/: .gitignore
expectations/: prices_suite.yml
scripts/: build_features.py  create_views.py  ingest_prices.py  run_backtest.py
tests/: test_agent_graph.py
workflows/: daily_prices.py
